# cpp-observing

./: ChangeLog  Makefile.am  README  configure.ac  error  warnings
doc/: Changes.html  Doxyfile.bak  Doxyfile.in  Makefile  Makefile.am  conf.py  docgen.in  genrst.py  index.rst
examples/: ctcv  detached  ec11  eduardo  gd552  gentab.pl  genweb.pl  hs0445.times  huaqr  ippeg  mar06  march06  nnser  ogle132b  rwtri  sdss0407  sdss0407.times  sdss0901.times  sdss0926  sdss0936  sdss1227  sdss1257  sdss1702  stardata  test  test1  test2  ugem  uuaqr  vltjun07  wzsge  zcha
include/: Makefile.am  trm_observing.h
include/trm/: observing.h
src/: Makefile.am  airmass.cc  eclipsers.cc  ephemeris.cc  starinfo.cc  startime.cc  suntime.cc  whatphases.cc  when_visible.cc
